--- a/tileserver/docker/api/Dockerfile
+++ b/tileserver/docker/api/Dockerfile
@@ -5,10 +5,11 @@ RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 COPY ./api /code/api
 RUN chown -R 999:999 /code
 USER 999:999
-CMD ["fastapi", "run", "api/main.py", "--port", "80"]
+ENV PORT=8081
+CMD ["sh", "-c", "fastapi run api/main.py --port ${PORT}"]
 
 ## In the project root, build the Docker image:
 #sudo systemctl restart docker
 #docker login
 #docker build -t worldhistoricalgazetteer/tileapi ./tileserver/docker/api
-#docker push worldhistoricalgazetteer/tileapi
+#docker push worldhistoricalgazetteer/tileapi:0.0.1
