--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,21 +24,26 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r docs/requirements.txt
+          pip install -r docs-source/requirements.txt
 
       # Build the documentation
       - name: Build documentation
         run: |
-          cd docs  # Change to the /docs directory
+          cd docs-source  # Change to the /docs-source directory
           make clean
           make html
+
+      # Copy the built files to the /docs folder for GitHub Pages
+      - name: Copy built files for GitHub Pages
+        run: |
+          mkdir -p docs  # Ensure the docs folder exists for GitHub Pages
+          cp -r docs-source/_build/html/* docs/
 
       # Commit the built files to the main branch
       - name: Commit and push documentation to main
         run: |
-          cd docs  # Stay in the /docs directory
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add -f _build/html/*  # Add the built HTML files
+          git add -f docs/*  # Add the built HTML files in the docs folder
           git commit -m "Deploy documentation"
           git push origin main  # Push the built files to the main branch
