--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,49 +1,60 @@
-name: Build and Deploy Documentation
+name: Build and Deploy Documentation to GitHub Pages
 
 on:
   push:
-    branches:
-      - main  # Trigger the build on pushes to the main branch
+    branches: ["main"]  # Trigger the build on pushes to the main branch
+  workflow_dispatch:  # Allow manual triggers from the GitHub Actions tab
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-  build:
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-
     steps:
-      # Checkout the repository
+      # Step 1: Checkout the repository
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      # Set up Python
+      # Step 2: Set up Python (for Sphinx build)
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: 3.9
 
-      # Install dependencies
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r docs-source/requirements.txt
 
-      # Build the documentation
+      # Step 4: Build the documentation
       - name: Build documentation
         run: |
-          cd docs-source  # Change to the /docs-source directory
-          make clean
-          make html
+          cd docs-source  # Navigate to the docs-source directory
+          make clean      # Clean any previous build files
+          make html       # Generate the HTML documentation
 
-      # Copy the built files to the /docs folder for GitHub Pages
-      - name: Copy built files for GitHub Pages
-        run: |
-          mkdir -p docs  # Ensure the docs folder exists for GitHub Pages
-          cp -r docs-source/_build/html/* docs/
+      # Step 5: Prepare the docs for deployment
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
 
-      # Commit the built files to the main branch
-      - name: Commit and push documentation to main
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add -f docs/*  # Add the built HTML files in the docs folder
-          git commit -m "Deploy documentation"
-          git push origin main  # Push the built files to the main branch
+      # Step 6: Upload the built HTML files as an artifact
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: docs-source/_build/html  # Upload the built HTML files
+
+      # Step 7: Deploy the built docs to GitHub Pages
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
