--- a/tileserver/templates/tileserver-exec-role.yaml
+++ b/tileserver/templates/tileserver-exec-role.yaml
@@ -4,8 +4,8 @@ metadata:
   name: tileserver-exec-role
 rules:
 - apiGroups: [""]
-  resources: ["pods/exec"]
-  verbs: ["get", "create", "delete"]
+  resources: ["pods", "pods/exec"]
+  verbs: ["get", "list", "watch", "create", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
