--- a/tileserver/repository/reconfiguration/base-config.json
+++ b/tileserver/repository/reconfiguration/base-config.json
@@ -7,7 +7,7 @@
       "icons": "./assets/icons",
       "styles": "./assets/styles",
       "mbtiles": "./tiles",
-      "files": "./assets/files",
+      "files": "./mapdata",
       "images": "/usr/src/app/public/resources/images"
     }
   },
