--- a/whg/files/package.json
+++ b/whg/files/package.json
@@ -11,6 +11,7 @@
     "@citation-js/plugin-csl": "^0.7.14",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@mapbox/mapbox-gl-draw": "^1.4.3",
+    "@mapbox/mbtiles": "^0.12.1",
     "@maptiler/sdk": "^1.1.2",
     "@turf/turf": "^6.5.0",
     "bootstrap": "~5.2.3",
