--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,12 @@ kubectl==1.30.8-1.1
 conntrack==1:1.4.8-1ubuntu1
 cri-tools==1.30.1-1.1
 kubernetes-cni==1.4.0-1.1
+httpx~=0.28.1
+fastapi~=0.115.6
+pydantic~=2.10.4
+boto3~=1.35.90
+kubernetes~=31.0.0
+ijson~=3.3.0
+requests~=2.32.3
+botocore~=1.35.90
+mbutil~=0.3.0
