--- a/tileserver/docker/api/Dockerfile
+++ b/tileserver/docker/api/Dockerfile
@@ -11,5 +11,5 @@ CMD ["sh", "-c", "fastapi run api/main.py --port ${PORT}"]
 ## In the project root, build the Docker image:
 #sudo systemctl restart docker
 #docker login
-#docker build -t worldhistoricalgazetteer/tileapi ./tileserver/docker/api
-#docker push worldhistoricalgazetteer/tileapi:0.0.1
+#docker build -t worldhistoricalgazetteer/tileapi:0.0.2 ./tileserver/docker/api
+#docker push worldhistoricalgazetteer/tileapi:0.0.2
