Add DEM style for elevation queries

--- a/tileserver/repository/reconfiguration/base-config.json
+++ b/tileserver/repository/reconfiguration/base-config.json
@@ -29,6 +29,11 @@
       "serve_rendered": false,
       "serve_data": true
     },
+    "DEM": {
+      "style": "terrarium/style.json",
+      "serve_rendered": false,
+      "serve_data": false
+    },
     "Satellite": {
       "style": "satellite/style.json",
       "serve_rendered": false,
