Add DEM style for elevation queries

--- a/tileserver/repository/reconfiguration/base-config.json
+++ b/tileserver/repository/reconfiguration/base-config.json
@@ -32,7 +32,7 @@
     "DEM": {
       "style": "terrarium/style.json",
       "serve_rendered": false,
-      "serve_data": false
+      "serve_data": true
     },
     "Satellite": {
       "style": "satellite/style.json",
