Add DEM style for elevation queries

--- a/tileserver/repository/reconfiguration/base-config.json
+++ b/tileserver/repository/reconfiguration/base-config.json
@@ -31,8 +31,8 @@
     },
     "DEM": {
       "style": "terrarium/style.json",
-      "serve_rendered": false,
-      "serve_data": false
+      "serve_rendered": true,
+      "serve_data": true
     },
     "Satellite": {
       "style": "satellite/style.json",
