--- a/tileserver/repository/reconfiguration/base-config.json
+++ b/tileserver/repository/reconfiguration/base-config.json
@@ -29,8 +29,8 @@
       "serve_rendered": false,
       "serve_data": true
     },
-    "DEM": {
-      "style": "terrarium/style.json"
+    "elevation": {
+      "style": "elevation/elevation.json"
     },
     "Satellite": {
       "style": "satellite/style.json",
