--- a/tileserver/repository/reconfiguration/base-config.json
+++ b/tileserver/repository/reconfiguration/base-config.json
@@ -11,6 +11,20 @@
       "images": "/usr/src/app/public/resources/images"
     }
   },
+  "formatOptions": {
+    "jpeg": {
+      "quality": 80
+    },
+    "webp": {
+      "quality": 90
+    },
+    "png": {
+      "palette": false,
+      "colors": 8,
+      "compressionLevel": 9
+    }
+  },
+  "maxScaleFactor": 3,
   "serveAllFonts": true,
   "serveAllStyles": true,
   "serveStaticMaps": true,
@@ -28,6 +42,18 @@
       "style": "OSM/style.json",
       "serve_rendered": false,
       "serve_data": true
+    },
+    "elevation": {
+      "style": "elevation/elevation.json",
+      "serve_rendered": true,
+      "serve_data": false,
+      "tilejson": {
+        "bounds": [-180, -85, 180, 85],
+        "center": [0, 0, 2],
+        "minzoom": 0,
+        "maxzoom": 10,
+        "format": "png"
+      }
     },
     "Satellite": {
       "style": "satellite/style.json",
