--- a/vespa/templates/query-container.yml
+++ b/vespa/templates/query-container.yml
@@ -7,13 +7,15 @@ spec:
   replicas: {{ .Values.replicaCounts.query }}
   selector:
     matchLabels:
-      app: vespa-query-container
+      app: vespa
+      role: query
       name: vespa-internal
   serviceName: vespa-internal
   template:
     metadata:
       labels:
-        app: vespa-query-container
+        app: vespa
+        role: query
         name: vespa-internal
     spec:
       initContainers: # Init container to force wait for readiness of configservers
@@ -21,8 +23,9 @@ spec:
       containers:
       - name: vespa-query-container
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        args: ["services"]
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        ports: {{- toYaml .Values.ports | nindent 10 }}
+        args: ["services"]
         securityContext: {{- toYaml .Values.securityContext.container | nindent 10 }}
         envFrom:
         - configMapRef:
